[package]
name = "m-bus-parser"
version = "0.0.27"
edition = "2021"
description = "A library for parsing M-Bus frames"
license = "MIT"
homepage = "https://maebli.github.io/"
repository = "https://github.com/maebli/m-bus-parser"
readme = "README.md"
authors = ["Michael Aebli"]
keywords = ["m-bus", "parser", "parse"]
exclude = ["/resources", "/tests", "examples"]

[dev-dependencies]
criterion = { version = "0.7.0", features = ["html_reports"] }
walkdir = "2.5.0"
hex = "0.4"
serde = "1.0.217"
serde_derive = "1.0.217"
serde-xml-rs = "0.8.1"

[build-dependencies]
bindgen = "0.72.0"

[features]
default = []
std = ["prettytable-rs", "serde_json", "serde_yaml", "serde"]
plaintext-before-extension = []
serde = ["dep:serde", "arrayvec/serde", "bitflags/serde"]
defmt = ["dep:defmt"]

[profile.release]
opt-level = 'z'   # Optimize for size
lto = true        # Enable Link Time Optimization
codegen-units = 1 # Reduce codegen units to improve optimizations

[profile.release.package."m-bus-parser-wasm-pack"]
opt-level = "s"

[dependencies]
prettytable-rs = { version = "^0.10", optional = true }
serde_json = { version = "1.0.138", optional = true }
serde_yaml = { version = "0.9", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
bitflags = "2.8.0"
arrayvec = { version = "0.7.4", default-features = false }
defmt = { version = "1.0.1", optional = true }
[workspace]
members = ["cli", "wasm","python"]
exclude = ["examples/cortex-m"]

[[bench]]
name = "bench"
harness = false


[lints.clippy]
unwrap_used = "warn"
unwrap_in_result = "warn"
panic = "warn"
expect_used = "warn"
unimplemented = "warn"
suspicious = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
indexing_slicing = "warn"
