[package]
name = "m-bus-parser"
version = "0.0.28"
edition = "2021"
description = "A library for parsing M-Bus frames (wired and wireless support)"
license = "MIT"
homepage = "https://maebli.github.io/"
repository = "https://github.com/maebli/m-bus-parser"
readme = "README.md"
authors = ["Michael Aebli"]
keywords = ["m-bus", "parser", "parse"]
exclude = ["/resources", "/tests", "examples"]

[dev-dependencies]
criterion = { version = "0.7.0", features = ["html_reports"] }
walkdir = "2.5.0"
hex = "0.4"
serde = "1.0.217"
serde_derive = "1.0.217"
serde-xml-rs = "0.7.0"

[build-dependencies]
bindgen = "0.72.0"

[features]
default = []
# Wired M-Bus support (always available for backwards compatibility)
wired = []
# Wireless M-Bus support (opt-in)
wireless = ["dep:m-bus-wireless-frame"]
# Pass-through features to sub-crates
std = ["m-bus-application-layer/std", "m-bus-wired-frame/std"]
plaintext-before-extension = []
serde = ["m-bus-application-layer/serde", "m-bus-wired-frame/serde"]
defmt = ["m-bus-application-layer/defmt", "m-bus-wired-frame/defmt"]

[profile.release]
opt-level = 'z'   # Optimize for size
lto = true        # Enable Link Time Optimization
codegen-units = 1 # Reduce codegen units to improve optimizations

[profile.release.package."m-bus-parser-wasm-pack"]
opt-level = "s"

[dependencies]
# Sub-crates
m-bus-application-layer = { path = "m-bus-application-layer", version = "0.1.0" }
m-bus-wired-frame = { path = "m-bus-wired-frame", version = "0.1.0" }
m-bus-wireless-frame = { path = "m-bus-wireless-frame", version = "0.1.0", optional = true }
[workspace]
members = [
    "m-bus-application-layer",
    "m-bus-wired-frame",
    "m-bus-wireless-frame",
    "cli",
    "wasm",
    "python"
]
exclude = ["examples/cortex-m"]
resolver = "2"

[workspace.dependencies]
# Shared dependencies across all crates
prettytable-rs = "^0.10"
serde_json = "1.0.138"
serde_yaml = "0.9"
serde = { version = "1.0", features = ["derive"] }
bitflags = "2.8.0"
arrayvec = { version = "0.7.4", default-features = false }
defmt = "1.0.1"

[[bench]]
name = "bench"
harness = false


[lints.clippy]
unwrap_used = "warn"
unwrap_in_result = "warn"
panic = "warn"
expect_used = "warn"
unimplemented = "warn"
suspicious = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
indexing_slicing = "warn"
