[package]
name = "m-bus-parser"
version = "0.1.0"
edition = "2021"
description = "A library for parsing M-Bus frames"
license = "MIT"
homepage = "https://maebli.github.io/"
repository = "https://github.com/maebli/m-bus-parser"
readme = "README.md"
authors = ["Michael Aebli"]
keywords = ["m-bus", "parser", "parse"]
exclude = ["/resources", "/tests", "examples"]

[dev-dependencies]
criterion = { version = "0.7.0", features = ["html_reports"] }
walkdir = "2.5.0"
hex = "0.4"
serde = "1.0.217"
serde_derive = "1.0.217"
serde-xml-rs = "0.7.0"
serde_json = "1.0"

[build-dependencies]
bindgen = "0.72.0"

[features]
default = []
std = ["prettytable-rs", "serde_json", "serde_yaml", "serde", "wired-mbus-link-layer/std", "wireless-mbus-link-layer/std", "m-bus-core/std", "m-bus-application-layer/std"]
plaintext-before-extension = ["m-bus-application-layer/plaintext-before-extension"]
serde = ["dep:serde", "arrayvec/serde", "bitflags/serde", "wired-mbus-link-layer/serde", "wireless-mbus-link-layer/serde", "m-bus-core/serde", "m-bus-application-layer/serde"]
defmt = ["dep:defmt", "wired-mbus-link-layer/defmt", "wireless-mbus-link-layer/defmt", "m-bus-core/defmt", "m-bus-application-layer/defmt"]
decryption = ["dep:aes", "dep:cbc", "dep:cipher", "dep:aes-gcm", "dep:ccm", "m-bus-application-layer/decryption"]

[profile.release]
opt-level = 'z'   # Optimize for size
lto = true        # Enable Link Time Optimization
codegen-units = 1 # Reduce codegen units to improve optimizations

[profile.release.package."m-bus-parser-wasm-pack"]
opt-level = "s"

[dependencies]
prettytable-rs = { version = "^0.10", optional = true }
serde_json = { version = "1.0.138", optional = true }
serde_yaml = { version = "0.9", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
bitflags = "2.8.0"
arrayvec = { version = "0.7.4", default-features = false }
defmt = { version = "1.0.1", optional = true }
wired-mbus-link-layer = {path = "crates/wired-mbus-link-layer"}
wireless-mbus-link-layer = {path = "crates/wireless-mbus-link-layer"}
m-bus-core = {path = "crates/m-bus-core"}
m-bus-application-layer = {path = "crates/m-bus-application-layer"}
aes = { version = "0.8", optional = true, default-features = false }
cbc = { version = "0.1", optional = true, default-features = false }
cipher = { version = "0.4", optional = true, default-features = false, features = ["block-padding"] }
aes-gcm = { version = "0.10", optional = true, default-features = false, features = ["aes"] }
ccm = { version = "0.5", optional = true, default-features = false }

[workspace]
members = ["cli", "wasm","python", "crates/m-bus-application-layer", "crates/wired-mbus-link-layer", "crates/wireless-mbus-link-layer", "crates/m-bus-core"]
exclude = ["examples/cortex-m"]

[[bench]]
name = "bench"
harness = false


[lints.clippy]
unwrap_used = "warn"
unwrap_in_result = "warn"
panic = "warn"
expect_used = "warn"
unimplemented = "warn"
suspicious = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
indexing_slicing = "warn"
