[package]
name = "m-bus-parser-cli"
version = "0.0.7"
edition = "2021"
description = "A cli to use the library for parsing M-Bus frames"
license = "MIT"
homepage = "https://maebli.github.io/"
repository = "https://github.com/maebli/m-bus-parser"
readme = "README.md"
authors = ["Michael Aebli"]
keywords = ["m-bus", "parser", "parse", "cli"]

[dev-dependencies]

[build-dependencies]

[features]


[dependencies]
m-bus-parser = { path = "..", version = "0.0.12", features = ["std", "serde"] }
clap = { version = "4.5.4", features = ["derive"] }
