[package]
name = "m-bus-parser-cli"
version = "0.1.0"
edition = "2021"
description = "A cli to use the library for parsing M-Bus frames"
license = "MIT"
homepage = "https://maebli.github.io/"
repository = "https://github.com/maebli/m-bus-parser"
readme = "README.md"
authors = ["Michael Aebli"]
keywords = ["m-bus", "parser", "parse", "cli"]

[package.metadata.release]
tag-name = "cli-v{{version}}"

[dev-dependencies]

[build-dependencies]

[features]
default = ["decryption"]
decryption = ["m-bus-parser/decryption"]

[dependencies]
m-bus-parser = { path = "..", version = "0.1.0", features = ["std", "serde"] }
hex = "0.4"
clap = { version = "4.5.4", features = ["derive"] }
