[package]
name = "pymbusparser"
version = "0.0.8"
edition = "2021"
homepage = "https://maebli.github.io/"
repository = "https://github.com/maebli/m-bus-parser"
description = "A Python binding for the M-Bus parser"
license = "MIT"

[dependencies]
m-bus-parser = { path = "..", version = "0.0.28", features = ["std", "serde"] }
serde_json = "1.0"
pyo3 = { version = "0.27.1", features = ["extension-module","generate-import-lib"] }
hex = "0.4.2"

[lib]
name = "pymbusparser"

[package.metadata.release]
tag-name = "python-v{{version}}"
