[tool.poetry]
name = "py-m-bus-parser"
version = "0.1.0"
description = "Python bindings for m-bus-parser written in Rust"
readme = "README.md"
website = "github.com/maebli/m-bus-parser"
authors = ["Michael Aebli"]
license = "MIT"


[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
