[project]
name = "pymbusparser"
version = "0.0.3"
description = "Python bindings for m-bus-parser written in Rust"
homepage = "https://maebli.github.io/"
authors = [{name = "Michael Aebli", email = ""}] 
license = { text = "MIT" }
readme = "README_python.md"


[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"