[package]
name = "m-bus-parser-wasm-pack"
version = "0.0.0"
edition = "2021"
description = "A wasm-pack to use the library for parsing M-Bus frames"
license = "MIT"
homepage = "https://maebli.github.io/"
repository = "https://github.com/maebli/m-bus-parser"
readme = "README.md"
authors = ["Michael Aebli"]
keywords = ["m-bus", "parser", "parse", "wasm-pack"]


[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"
m-bus-parser = { path = "..", version = "0.0.9", features = [
    "std",
    "serde_support",
] }
serde = { version = "1.0" }
serde_json = "1.0"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.5", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
