[package]
name = "m-bus-core"
version = "0.1.0"
edition = "2024"

[features]
default = []
std = []
serde = ["dep:serde","std"]
defmt = ["dep:defmt"]
decryption = ["dep:aes", "dep:cbc"]

[dependencies]
serde = { version = "1.0", features = ["derive"], optional = true }
defmt = { version = "1.0.1", optional = true }
aes = { version = "0.8", optional = true }
cbc = { version = "0.1", optional = true }
